# capirinha

./: .gitignore  CMakeLists.txt  c.sh
src/: main.cpp
